Fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
     font-size: 15px;
     display: flex;
     flex-direction: column;
-    overflow: clip;
 }
 
 * {
